crates/ddlog-syntax/tests/parse/fail/missing_tuple_comma.dl
// kind:expr validate:false pass:false ignore:false
(1, 2 3)
